# exemple_gRPS_client

./: .gitignore  README.md  docker-compose.yaml  grpc_client.py  pyproject.toml  ruff.toml
grpc_clients/: auth_grpc_client.py  film_grpc_client.py
migrations/models/: 1_20240425103147_None.py
protobuf/: get_user_info.proto  get_user_info_pb2.py  get_user_info_pb2_grpc.py
protobuf/get_role_user/: get_role.proto  get_role_pb2.py  get_role_pb2_grpc.py
protobuf/update_token/: update_token.proto  update_token_pb2.py  update_token_pb2_grpc.py
src/: main.py
src/config/: settings.py  tortoise_connection.py
src/dao/: film_dao.py
src/models/: __init__.py  films_models.py
src/schemas/: auth_schemas.py  film_schemas.py
src/services/: film_services.py
src/view/: auth_view.py  film_view.py
ssl/: cert.pem
