[tool.poetry]
name = "microservices-films-remout-auth"
version = "0.1.0"
description = ""
authors = ["vladimirmac <vladimirbodrin89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pydantic = "2.6"
asyncpg = "^0.29.0"
grpcio-tools = "^1.62.2"
fastapi-debug-toolbar = "^0.6.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
